test/pass/array4.min
program
start
    array x[30];
    x[0] := 3;
end
