test/fail/repeated3.min
program
    array x; string x
start

end
